--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.4",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
-    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-loading": "^2.0.3",
+    "react-loading": "^2.0.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.14",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "postcss": "8.4.23",
+    "typescript": "5.0.4",
+    "@types/node": "20.2.4",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4"
   }
 }
